<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:background="@drawable/white" 
  android:orientation="vertical" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" 
> 
  <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"  
    android:layout_weight="1.0"  
  > 
    <TextView  
      android:id="@+id/myTextViewUp" 
      android:layout_width="wrap_content"  
      android:layout_height="wrap_content" 
      android:textColor="@drawable/black" 
      android:text="@string/pleaseInputPhoneNumber"
      android:textSize="30sp"  
    /> 
    </LinearLayout>
    <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
  >  
      <TextView 
      android:id="@+id/myTextViewPhoneNumber"  
      android:layout_width="fill_parent"  
      android:layout_height="fill_parent" 
      android:textColor="@drawable/green" 
      android:text=""
      android:textSize="40sp" 
      android:layout_marginLeft="10sp"
      android:layout_marginBottom="10sp"
      android:layout_marginTop="10sp"
    />   
  </LinearLayout>
  
   <LinearLayout 
    style="@android:style/ButtonBar" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal"> 
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="1" android:id="@+id/no1" android:layout_weight="1" />
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="2" android:id="@+id/no2" android:layout_weight="1"/>
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="3" android:id="@+id/no3" android:layout_weight="1"/>
  </LinearLayout> 
   <LinearLayout 
    style="@android:style/ButtonBar" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal"> 
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="4" android:id="@+id/no4" android:layout_weight="1" />
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="5" android:id="@+id/no5" android:layout_weight="1"/>
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="6" android:id="@+id/no6" android:layout_weight="1"/>
  </LinearLayout> 
   <LinearLayout 
    style="@android:style/ButtonBar" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal"> 
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="7" android:id="@+id/no7" android:layout_weight="1" />
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="8" android:id="@+id/no8" android:layout_weight="1"/>
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="9" android:id="@+id/no9" android:layout_weight="1"/>
  </LinearLayout> 
  <LinearLayout 
    style="@android:style/ButtonBar" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal"> 
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="@string/done" android:id="@+id/myButtonDone" android:layout_weight="1" />
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="0" android:id="@+id/no0" android:layout_weight="1"/>
   <Button android:layout_height="wrap_content" android:layout_width="0dip" android:text="@string/backspace" android:id="@+id/myButtonCancel" android:layout_weight="1"/>
  </LinearLayout> 
</LinearLayout>